# Exercicios-1-ao-10

./: CMakeLists.txt  Exercicio_1.c  Exercicio_10.c  Exercicio_2.c  Exercicio_3.c  Exercicio_4.c  Exercicio_5.c  Exercicio_6.c  Exercicio_7.c  Exercicio_8.c  Exercicio_9.c
Exercicio 1/: Exercicio_1.c
Exercicio 10/: Exercicio_10.c
Exercicio 2/: Exercicio_2.c
Exercicio 3/: Exercicio_3.c
Exercicio 6/: Exercicio_6.c
Exercicio 7/: Exercicio_7.c
Exercicio 8/: Exercicio_8.c
Exercicio 9/: Exercicio_9.c
Exercício 4/: Exercicio_4.c
